<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登	录</string>
    <string name="regist">注册</string>
    <string name="phone_number">手机号:</string>
    <string name="identifying_code">验证码:</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="forget_password">忘记密码？</string>
    <string name="exit">退出</string>
    <string name="user_name">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="confirm_password">确认密码:</string>
    <string name="remember_password">记住密码</string>
    <string name="find_password">找回密码</string>
    <string name="bingding_owner">绑定默认物业</string>
    <string name="examine_owner">业主审核</string>
    <string name="main_interface">主界面</string>
    <string name="individual_setting">个人设置</string>
    <string name="notice">公告</string>
    <string name="property_bill">物业账单</string>
    <string name="repair">报修</string>
    <string name="complaint">投诉</string>
    <string name="verification">实名认证</string>
    <string name="pay_property_bill">缴纳物业费</string>
    <string name="message_center">消息中心</string>
    <string name="my_repair">我的报修</string>
    <string name="my_complaint">我的投诉</string>
    <string name="evaluate_to_complaint">对投诉评价</string>
    <string name="change_password">修改密码</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="detail_of_property_binding">物业绑定情况</string>
    <string name="my_property">我的物业</string>
    <string name="my_binding">我的绑定</string>
    <string name="evaluate_to_repair">对报修评价</string>
    <string name="smart_unlock">智能开锁</string>
    <string name="cancel">取消</string>
    <string name="input_user_name">输入用户名</string>
    <string name="input_password">输入密码</string>
    <string name="input_phone_number">请输入手机号/账号</string>
    <string name="input_identifying_code">输入验证码</string>
    <string name="please_set_password">请设置密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="repair_what">修什么？</string>
    <string name="describe_detail">详细描述下...</string>
    <string name="theme">主题？</string>
    <string name="comment">评论...</string>
    <string name="real_name">姓名</string>
    <string name="birthday">出生日期</string>
    <string name="hint_emergency_contact">紧急联系人</string>
    <string name="hint_emergency_contact_phone">紧急联系电话</string>
    <string name="documents_type">证件类型</string>
    <string name="send_identifying_code">发送验证码</string>
    <string name="regist_means_agree">注册表示你同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="and">和</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="owers">业主</string>
    <string name="relative">关系</string>
    <string name="phone">手机：</string>
    <string name="require_binding_1">申请绑定</string>
    <string name="require_binding_2">申请绑定：</string>
    <string name="nickname">昵称：</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="next_step">下一步</string>
    <string name="enter">确认</string>
    <string name="main">首页</string>
    <string name="Store">实惠</string>
    <string name="individual">我的</string>
    <string name="whole_bill">全部账单</string>
    <string name="unpaid_bill">未交账单</string>
    <string name="community_announcement">社区公告</string>
    <string name="property_pay">物业缴费</string>
    <string name="selected_merchant">精选商家</string>
    <string name="group_buying_online">在线团购</string>
    <string name="building_unlock">楼栋开门</string>
    <string name="garage_door_unlock">车闸开门</string>
    <string name="i_wanna_complaint">我要投诉</string>
    <string name="call_customer_service">呼叫客服</string>
    <string name="complaint_records">投诉记录</string>
    <string name="repair_records">报修记录</string>
    <string name="repair_online">在线报修</string>
    <string name="profile">个人资料</string>
    <string name="change_profile">修改个人资料</string>
    <string name="check_property_binding">查看绑定</string>
    <string name="check_person_under_binding">查看绑定在我的物业下的人</string>
    <string name="click_to_change">点击修改</string>
    <string name="check_property_under_my_name">查看名下物业</string>
    <string name="exit_account">退出账户</string>
    <string name="re_login">退出账户重新登录</string>
    <string name="verifiy_identity">身份认证</string>
    <string name="upload_id">上传信息以认证您的身份</string>
    <string name="examine_property_binding">审核绑定</string>
    <string name="examine_property_binding_request">审核绑定到您物业的申请</string>
    <string name="respectable_user">尊敬的业主/住户:</string>
    <string name="hello">您好！</string>
    <string name="total_cost">本期费用合计</string>
    <string name="unpaid_amount">本期未交金额</string>
    <string name="click_to_post_photo">点击上传照片吧！</string>
    <string name="submit">提交</string>
    <string name="select_all">全选</string>
    <string name="amount_zero">总计：0.00元</string>
    <string name="delete">删除</string>
    <string name="comprehensive_score">综合评分</string>
    <string name="add">添加</string>
    <string name="number">编号：</string>
    <string name="property_type">物业类型：</string>
    <string name="property_number">物业编号</string>
    <string name="add_binding">增加绑定</string>
    <string name="check_my_binding">查看我的绑定</string>
    <string name="my_binding_property">我绑定的物业</string>
    <string name="check_my_binding_property">查看我绑定的物业</string>
    <string name="role">角色</string>
    <string name="visitor_role_text">访客</string>
    <string name="relative_role_text">家属</string>
    <string name="rentor_role_text">租客</string>
    <string name="binding_status">绑定状态：</string>
    <string name="propertySquare">面积：</string>
    <string name="property_status">物业状态：</string>
    <string name="property_adress">物业地址：</string>
    <string name="more">更多</string>
    <string name="opendoor1">按键开门</string>
    <string name="opendoor2">摇一摇</string>
    <string name="opendoor3">自动</string>
    <string name="opendoorway">开门设置</string>
    <string name="default_opendoorway">默认选择为 蓝牙开门</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>

    <string name="wait_wifi">等待WiFi开启</string>
    <string name="wait_network">等待网络连接</string>
    <string name="park">园区</string>
    <string name="building">楼栋</string>
    <string name="property">物业</string>
    <string name="birthday2">出生日期：</string>
    <string name="emergency_contact">紧急联系人：&#160;&#160;&#160;</string>
    <string name="emergency_contact_phone">紧急联系电话：</string>
    <string name="plate_number">车牌号：</string>
    <string name="old_password">输入旧密码</string>
    <string name="new_password">输入新密码</string>
    <string name="ensure_password">确认新密码</string>
    <string name="click_to_set">点击设置</string>
    <string name="name2">姓名：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="sex">性别：</string>
    <string name="property2">物业：</string>
    <string name="choice_property">选择物业</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="edit">修改</string>
    <string name="release_binding">解除绑定</string>
    <string name="address2">地址</string>
    <string name="auto_unlock">自动开门</string>
    <string name="wifi_bluetooth_switcher">切换开锁方式</string>
    <string name="press_to_unlock">按键开门</string>
    <string name="click_to_unlock">点击应用的按钮开门</string>
    <string name="shake_to_unlock">摇一摇开锁功能</string>
    <string name="near_and_shake_to_unlock">靠近门锁摇一摇手机开门</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="call_us">联系我们</string>
    <string name="request_bind">申请绑定</string>
    <string name="request_bind_discribe">申请绑定新的物业</string>

    <string name="button_text_unpressed">一键开锁</string>
    <!--开锁流程启动-->
    <string name="button_text_pressed">开锁流程启动</string>
    <string name="textview_text_default">点击开锁按钮来开锁</string>
    <string name="textview_text_openwifi">检测WiFi状态</string>
    <string name="textview_text_Enable_wifi_by_program">启用WiFi成功\n开始扫描</string>
    <string name="textview_text_Enable_wifi_failed_by_lack_permission">取消WiFi\n请重试</string>
    <string name="textview_text_Enable_wifi_outtime">启用WiFi超时</string>
    <string name="textview_text_connect_wifi_start">连接WiFi\n请稍后...</string>
    <string name="textview_text_connect_failed">连接WiFi失败</string>
    <string name="textview_text_connect_success">连接WiFi成功</string>
    <string name="textview_text_connect_outtime">连接WiFi超时</string>
    <string name="textview_text_unlock_success">开锁成功\n请等待锁复位</string>
    <string name="textview_text_unlock_failed">开锁失败\n请重试</string>
    <string name="textview_text_unlock_start">正在寻找设备\n请稍后...</string>
    <string name="textview_text_scan_noresult">没有检测到设备\n点击重试</string>
    <string name="checkbox_text">摇一摇开锁</string>

    <string name="radiobutton_bluetooth">蓝牙</string>
    <string name="radiobutton_wifi">WiFi</string>
    <string name="shop_title">实惠</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="textview_text_open_by_wifi">WiFi开门</string>
    <string name="textview_text_open_by_bluetooth">蓝牙开门</string>

    <string name="textView_switch_dialog_title">选择登录园区</string>
    <string name="textView_switch_dialog_remember">记住我的选择</string>
    <string name="textView_switch_dialog_confirm">确定</string>

    <string name="textView_tiedowner_description">请选择默认登陆的园区，若有更多园区需要绑定，请在提交后点击绑定更多。</string>
    <string name="textView_tiedowner_type">物业种类： </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="1qfffq3f1f "-->

</resources>