<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
       android:id="@+id/rl_title"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@color/write" >

        <!--返回按钮layout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical" >

            <ImageButton
                android:id="@+id/resetpasswoed_back"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:background="@color/write"
                android:scaleType="fitCenter"
                android:src="@drawable/goback1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/style"
            android:textSize="18sp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/resetpassword_theme"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:background="@color/write"
        android:gravity="center" 
        android:layout_below="@id/rl_title">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/resetpassword_title" 
            android:scaleType="fitCenter"/>
    </RelativeLayout>
    
    <!-- 填写信息 -->
    <RelativeLayout 
        android:id="@+id/rl_content_resetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/resetpassword_theme"
        >
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:orientation="horizontal">
        
        <!-- 旧密码 -->
        <TableRow 
            android:layout_marginBottom="32dp">


            <EditText
                android:id="@+id/old_password_edit"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:ems="9"
                android:gravity="center"
                android:inputType="textPassword" />
        </TableRow>
        
        <!-- 新密码 -->
        <TableRow 
            android:layout_marginBottom="32dp">

            
            <EditText
                android:id="@+id/new_password_edit"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:ems="9"
                android:gravity="center"
                android:inputType="textPassword" />
		</TableRow>
            
        <!-- 确认密码 -->
        <TableRow 
            android:layout_marginBottom="32dp">

            
            <EditText
                android:id="@+id/ensure_password_edit"
                android:layout_height="wrap_content"
                android:hint="@string/ensure_password"
                android:ems="9"
                android:gravity="center"
                android:inputType="textPassword" />
		</TableRow>
    </TableLayout>
    
    </RelativeLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_below="@id/rl_content_resetpassword"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btn_ensure_reset_password"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:text="@string/enter"
                android:textColor="@color/write"
                android:background="@drawable/fillet_button"
                />
    
            
        </LinearLayout>

</RelativeLayout>