<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="match_parent"
    android:clickable="true"
    android:padding="10dp"
    android:background="@color/write">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/write"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title_switchdepartment"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/textView_switch_dialog_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>

        <ListView
            android:id="@+id/department_switcher_listView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:divider="@color/gray1"
            android:scrollbars="vertical" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/department_switcher_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:background="@drawable/department_switcher_checkbox_bg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textView_switch_dialog_remember"/>
        </LinearLayout>
        <Button
            android:id="@+id/department_switcher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape"
            android:text="@string/textView_switch_dialog_confirm"
            android:textColor="@color/write"/>
    </LinearLayout>

</FrameLayout>